# DrawerLabels

./: .gitignore  BoltNutScrewTypesList - screws.csv  Caddyfile  README.md  compose.yaml  impl-plan.md  install-macos.sh  plan.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: color_rules.py  db.py  main.py  models.py  schemas.py  types.py
backend/app/routers/: detail.py  parts.py  qr.py  scan.py  shopping.py  uploads.py
backend/config/: label_colors.yaml  seed_parts.yaml
backend/data/: drawerlabels.db
backend/scripts/: import_csv.py  seed_parts.py  seed_unused_pics.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/parts/[id]/edit/: page.tsx
frontend/app/parts/new/: page.tsx
frontend/app/print/: page.tsx
frontend/app/scan/: page.tsx
frontend/components/: Label.tsx  PaperPreview.tsx  PartForm.tsx  PartsTable.tsx  QrScanner.tsx  TypeCombobox.tsx
frontend/lib/: api.ts
scripts/: start-docker-stack.sh
